# kbc_p3dh

./: .gitignore  README.md  dashboard.py  ingest.py  ingest_p3dh.py  kbc_p3dh.db  pyproject.toml  requirements.txt  startup.sh
Mapping/: 20250519 Annotated Table Layout  CODISPILLAR3 4.1.xlsx  20250519 Annotated Table Layout  IRRBBDISPILLAR3 4.1.xlsx
P3DH downloads/: k_00.02.csv  k_07.00.csv  k_12.00.csv  k_28.00.csv  k_60.00.a.csv  k_60.00.b.csv  k_61.00.csv  k_63.01.a.csv  k_63.01.b.csv  k_63.01.c.csv  k_63.01.d.csv  k_63.01.e.csv  k_63.02.a.csv  k_63.02.b.csv  k_63.02.c.csv  k_68.00.csv  k_73.00.a.csv  k_73.00.b.csv  k_73.00.c.csv  k_73.00.d.csv  k_73.00.e.csv
src/kbc_p3dh/: _run.py  loader.py  mapping.py
