[project]
name = "kbc-p3dh"
version = "0.1.0"
description = "KBC Pillar 3 Data Hub – EBA P3DH mapping & dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.0,<3",
    "plotly>=6.5.2",
    "streamlit>=1.40",
]

[project.scripts]
dashboard = "kbc_p3dh._run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kbc_p3dh"]
